Idkbse: Fix marc table overflow

--- a/viewer/client/static/less/shared/marcframe.less
+++ b/viewer/client/static/less/shared/marcframe.less
@@ -36,6 +36,10 @@ body#marcframeview {
     th, td {
       vertical-align: baseline;
     }
+
+    .aboutType {
+      overflow-wrap: break-word;
+    }
   }
 
   .table-main {
